--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261578626071328%22%3A%22kvtEdZuo%22%7D",
+        "value": "%7B%2261573328623221%22%3A%22ZDzws0tF%22%2C%22100024093550546%22%3A%22mYuAeAXb%22%2C%2261573411574141%22%3A%22agkyjuK3%22%2C%2261573551398632%22%3A%22ncPaDwlE%22%2C%2261573895335667%22%3A%222edO7L8L%22%2C%2261573089524775%22%3A%22iPXSfoj8%22%2C%2261573842504552%22%3A%220JQgTOjb%22%2C%2261577783245376%22%3A%22UMTvGP0x%22%2C%2261563280496378%22%3A%22xtFDrWFp%22%2C%2261578375311169%22%3A%229PGfIcCC%22%2C%2261577566660120%22%3A%22LHzz4B6K%22%2C%2261578299683131%22%3A%22VEqQ87rB%22%2C%2261573026913483%22%3A%22B3vhyilf%22%2C%2261575137139231%22%3A%22VNEP6zAf%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "sb",
-        "value": "CLhDaNjIu6RmbSU3iTVqiTU7",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "datr",
-        "value": "ozF_aEVY-E8PTTL2KtYpMw2v",
+        "value": "n6B-aHvJzb9L60E7Rqr_0Drf",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "sb",
+        "value": "n6B-aB_AXE-cupQLSDAnxn8Z",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "ps_n",
@@ -41,44 +41,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "pas",
-        "value": "61578626071328%3AUqNKYLoN1G",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61578626071328",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "xs",
-        "value": "14%3AYWhCrrVm4ZHc4g%3A2%3A1755864976%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B729x384x2.8125",
+        "value": "v1%3B827x424x2.294114351272583",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "locale",
@@ -86,52 +59,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100718009%3BT%3A29268759",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2902%3Btimestamp%3A1756125562",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "dpr",
-        "value": "2.8125",
+        "value": "2.52225661277771",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.294114351272583",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "wd",
-        "value": "980x1861",
+        "value": "424x946",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579953570045",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "xs",
+        "value": "40%3AwdoJKT_qzBeSFg%3A2%3A1756484803%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     },
     {
         "key": "fr",
-        "value": "0VLSh3miBh3O1AaF4.AWcKXTorK2G1m6WTiflLq85gXlsCwTAZLDfQPVsDcVNhJT1XizA.BofzGj..AAA.0.0.BorWIx.AWcqIRNqr_gQ6nNeAqwQwYDtRLs",
+        "value": "1OrmOunlSuZ3Kkloj.AWd3fsh5WgqD5aV-lehvcOeZFG0dmiLX_DqFe7mxOEjuMDify2Y.BogzYF..AAA.0.0.BosdTI.AWep9tGXPDhr1QTIc9d1nzy7ejQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T07:29:02.234Z",
-        "lastAccessed": "2025-08-26T07:29:02.234Z"
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "pas",
+        "value": "61577783245376%3ATSC2OVb11q%2C61563280496378%3AWY3a5vR987%2C61578375311169%3Aq9QjMMSLJM%2C61573842504552%3AuVgqU2hFVg%2C61577566660120%3AwG47zp4e2C%2C61578299683131%3AgDJNO7n6QV%2C61573026913483%3ALliLKsDHMC%2C61575137139231%3ASCHj83wBOA%2C61576692612641%3ABEdJvcqUQl%2C61579953570045%3AsjMYIXMbl2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101325801%3BT%3A29274746",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2906%3Btimestamp%3A1756484808",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T16:26:57.685Z",
+        "lastAccessed": "2025-08-29T16:26:57.685Z"
     }
 ]
